--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Homework 5.2 for AJS-7 in Netology",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage",
+    "start": "live-server src",
+    "build": "babel src -d dist",
+    "lint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -37,6 +40,10 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "core-js": "^3.6.5"
+    "babel-loader": "^8.1.0",
+    "core-js": "^3.6.5",
+    "live-server": "^1.2.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
